# HiveMind

./: .gitignore  AGENT.md  Hypothesis.md  README.md
.cdr/: cdr.config.json
.cdr/commits/: btree-cleanup-2026-07-07.md  task-1.3.5.md  task-1.4.1.md  task-1.4.2.md  task-1.4.3.md  task-1.4.4.md  task-1.5.1.md  task-1.5.2.md  task-2a.1.1.md  task-2a.1.2.md  task-2a.1.3.md  task-2a.1.4.md  task-2a.1.5.md  task-2a.2.1.md  task-2a.2.2.md  task-2a.2.3.md  task-2a.3.1.md  task-2a.3.2.md  task-2a.4.1.md  task-2a.4.2.md  task-2a.4.3.md  task-2a.4.4.md  task-2a.4.5-fix.md  task-2a.4.5.md  task-2b.1-issue-10.md  task-2b.1.1.md  task-2b.1.2.md  task-2b.1.3.md  task-2b.2-issue-11.md  task-2b.2.1.md  task-2b.2.2.md  task-2b.3-issue-12.md  task-2b.3.1.md  task-2b.3.2.md  task-2b.3.3.md  task-2b.3.4.md  task-2b.3.5.md  task-2b.3.6.md  task-2b.4.1.md  (+51 more)
agents/: hivemind_pb2.py  hivemind_pb2.pyi  hivemind_pb2_grpc.py  json_fences.py  pyproject.toml  test_hivemind_pb2_smoke.py
agents/eval/: calibrate_judge.py  chart.py  cost_latency.py  datasets.py  ground_truth.py  llm_judge.py  metrics.py  pipeline.py  run_benchmark.py  run_live_benchmark.py  test_chart.py  test_cost_latency_aggregation.py  test_dataset_interface.py  test_graphrag_baseline.py  test_ground_truth.py  test_llm_judge.py  test_metrics_recall_precision.py  test_run_benchmark.py  test_run_live_benchmark.py  test_shared_final_llm.py  test_traversal_precision_check.py  test_vector_rag_baseline.py  test_vector_rag_rerank.py  traversal_precision.py
agents/eval/baselines/: graphrag_lite.py  vector_rag.py  vector_rag_rerank.py
agents/ingestion/: _json_fences.py  dispatch.py  normalize_email.py  normalize_pdf.py  normalize_ticket.py  propose_split.py  rawdoc.py  segment.py  shortlist.py  test_dispatch.py  test_e2e_smoke.py  test_normalize_email.py  test_normalize_pdf.py  test_normalize_ticket.py  test_propose_split.py  test_segment.py  test_segment_fixtures.py  test_segment_live.py  test_segment_wiring.py  test_shortlist.py  wiring.py
agents/ingestion/testdata/: enron_sample_1.txt  enron_sample_2_reply.txt  enron_sample_3_no_optional_headers.txt  enron_sample_4_multipart.txt  enron_sample_5_quoted_printable.txt  enron_sample_6_display_name_from.txt  enron_sample_7_multi_cc.txt  ticket_sample_1.csv  ticket_sample_1.json  ticket_sample_2_minimal.csv
agents/ingestion/testdata/notes_corpus/: billing_invoice_dispute.md  billing_refund_requests.md  engineering_oncall_runbook.md  hr_onboarding_checklist.md
agents/llm/: client.py  factory.py  gemini_client.py  interceptor.py  ollama_client.py  openrouter_client.py  test_gemini_client.py  test_interceptor.py  test_ollama_client.py  test_openrouter_client.py  test_provider_selection.py
agents/query/: conftest.py  intent_refiner.py  pipeline.py  server.py  synthesizer.py  test_intent_refiner.py  test_intent_refiner_live.py  test_intent_refiner_types.py  test_pipeline.py  test_query_e2e.py  test_server.py  test_synthesizer.py  test_synthesizer_citations.py  test_topic_selector.py  test_topic_selector_cap.py  test_topic_selector_expansion.py  test_topic_selector_integration.py  test_wiring.py  topic_selector.py  wiring.py
api/: go.mod  main.go
data/: README.md  gen_synthetic_pdfs.py  load_bitext.py  load_enron.py  test_gen_synthetic_pdfs.py  test_loaders.py
demo/: README.md
deploy/: .env.example  README.md  agents.Dockerfile  api.Dockerfile  docker-compose.yml  engine.Dockerfile  nginx.conf  smoke-test.sh  ui.Dockerfile
docs/: HLD.md  WRITEUP.md
engine/: go.mod  go.sum  integration_test.go
proto/: README.md  hivemind.proto
ui/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+1967 files in other folders)
