[project]
name = "hivemind-agents"
version = "0.1.0"
description = "HiveMind Python ML/agent service: ingestion segmentation, query agents, LLM provider layer, and benchmark/eval harness."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    "pydantic>=2.9",
    "httpx>=0.27",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingestion", "query", "llm", "eval"]
