[project]
name = "hivemind-agents"
version = "0.1.0"
description = "HiveMind Python ML/agent service: ingestion segmentation, query agents, LLM provider layer, and benchmark/eval harness."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    # Pinned explicitly (issue #46): must stay >= the gencode baked into the committed
    # hivemind_pb2*.py stubs (currently 6.33.5) to avoid VersionError at import time;
    # <7.0.0 matches grpcio-tools 1.81.1's own protobuf compatibility range.
    "protobuf>=6.33.5,<7.0.0",
    "pydantic>=2.9",
    "httpx>=0.27",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingestion", "query", "llm", "eval"]
# `json_fences` is a single-file, top-level shared module (issue #55 subtask
# 4.5.17.2), not a directory package, hence `py-modules` rather than `packages`.
py-modules = ["json_fences"]
